# rulesbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  Procfile  README.md  agents.md  docker-compose.yml  latest.dump  manage.py  pyproject.toml  readme.MD
.docs/prds/: ads.md
.github/workflows/: test.yml
.kamal/: secrets
ads/: admin.py  models.py  services.py  tests.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_image.py
ads/tests/: __init__.py  test_admin.py  test_models.py  test_services.py  test_views.py
chat/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_message_options_and_more.py  0003_sourcedocument.py  0004_chatsession_ip_address.py  0005_chatsession_user.py  0006_alter_chatsession_user.py
chat/retrievers/: rules_bot_retriever.py
chat/services/: agentic_streaming_question_answering_service.py  question_answering_service.py  streaming_question_answering_service.py
chat/templatetags/: chat_filters.py
config/: deploy.yml
games/: admin.py  apps.py  models.py  sitemaps.py  tests.py  urls.py  vectorstores.py  views.py
games/loaders/: pdf_loader_and_summarizer.py
games/migrations/: 0001_initial.py  0002_game_vector_store_binary.py  0003_remove_game_vector_store_binary.py  0004_document_public_url.py  0005_game_card_image_alter_document_public_url.py  0006_alter_game_card_image.py  0007_alter_game_card_image.py  0008_game_slug.py  0009_game_faiss_file.py  0011_document_rulebook_file.py  (+2 more)
pages/: sitemaps.py  tests.py  views.py
rulesbot/: asgi.py  settings.py  urls.py  wsgi.py
run-scripts/: .postgres-env  .rulesbot-env  backup-postgres.sh  restore-postgres.sh  run-postgres-container.sh  run-registry-container.sh  run-rulesbot-container.sh
templates/: master.html  robots.txt
tests/: decorators.py  evaluate_rulesbot.py
users/: forms.py  tests.py  urls.py  views.py
(+41 files in other folders)
