[tool.poetry]
name = "rulesbot"
version = "0.1.0"
description = ""
authors = ["Søren Blond Daugaard <soren@practicalai.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
Django = "^4.2.4"
pypdf = "^3.15.0"
langchain = "^0.0.261"
openai = "^0.27.8"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"
gunicorn = "^21.2.0"
django-environ = "^0.10.0"
psycopg = "^3.1.10"
whitenoise = "^6.5.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
