[tool.poetry]
name = "rulesbot"
version = "0.1.0"
description = ""
authors = ["Søren Blond Daugaard <soren@practicalai.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
Django = "^4.2.4"
pypdf = "^3.15.0"
langchain = "^0.3.0"
openai = "^1.0"
faiss-cpu = "^1.7.4"
gunicorn = "^21.2.0"
django-environ = "^0.10.0"
psycopg = "^3.1.10"
whitenoise = "^6.5.0"
django-storages = "^1.13.2"
boto3 = "^1.28.33"
pillow = "^10.0.0"
django-resized = "^1.0.2"
pymupdf = "^1.23.3"
honcho = "^1.1.0"
markdown = "^3.7"
langchain-community = "^0.3.27"
langchain-openai = "^0.3.31"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
pre-commit = "^3.3.3"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
